@@ -42,6 +42,7 @@ Bugfixes:
 - reduced max. idle time to prevent too many open sockets when using RTMPT
   with HTTP/1.0 (Jira APPSERVER-87)
 - fixed potential NPEs in PlaylistSubscriberStream (Jira SN-40)
+- fixed various problems with deserializing AMF0 references in remoting
 
 
 Red5 0.6    (2007-04-23)
